# household-os

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.claude/: README.md  settings.json
.claude/hooks/: block-main-commits.sh
.claude/rules/: adapters.md  code-ordering.md  documentation.md  ports.md  tests.md
.claude/skills/work-issue/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/adapter/: __init__.py
backend/app/adapter/input/: __init__.py
backend/app/adapter/input/web/: __init__.py
backend/app/adapter/input/web/models/: __init__.py  capture.py  extraction.py  pending_command.py
backend/app/adapter/input/web/routers/: __init__.py  capture.py  extraction.py  health.py  pending_command.py
backend/app/adapter/output/: __init__.py  elevenlabs_speech_transcription.py  local_disk_media_storage.py  mock_capture_repository.py  mock_expense_entry_repository.py  mock_extraction_agent.py  mock_media_storage.py  mock_pantry_intent_agent.py  mock_pantry_item_repository.py  mock_pending_command_repository.py  mock_speech_transcription.py  mock_unit_of_work.py  orm.py  sqlalchemy_capture_repository.py  sqlalchemy_expense_entry_repository.py  sqlalchemy_pantry_item_repository.py  sqlalchemy_pending_command_repository.py  sqlalchemy_unit_of_work.py
backend/app/application/: __init__.py  approve_command.py  create_capture.py  execute_verb.py  list_pending_commands.py  reject_command.py  run_extraction.py
backend/app/domain/: __init__.py
backend/app/domain/agents/: __init__.py  receipt_extraction.py  voice_intent_extraction.py
backend/app/domain/models/: __init__.py  capture.py  expense_entry.py  pantry_intent.py  pantry_item.py  pending_command.py  receipt.py
backend/app/domain/ports/: __init__.py  capture_repository.py  expense_entry_repository.py  extraction_agent.py  media_storage.py  pantry_intent_agent.py  pantry_item_repository.py  pending_command_repository.py  speech_transcription.py  unit_of_work.py
backend/app/infrastructure/: __init__.py  app.py  container.py  database.py  llm.py  settings.py
backend/requests/: capture.http  extraction.http  health.http  pending_command.http
backend/tests/: test_health.py
backend/tests/adapter/: __init__.py
backend/tests/adapter/input/: __init__.py
backend/tests/adapter/input/web/: __init__.py  test_capture.py  test_extraction.py  test_pending_command.py
backend/tests/adapter/output/: __init__.py  test_local_disk_media_storage.py
backend/tests/application/: __init__.py  test_approve_command.py  test_create_capture.py  test_list_pending_commands.py  test_reject_command.py  test_run_extraction.py
docs/adr/: 0001-monorepo-for-frontend-and-backend.md  0002-claude-design-for-component-library.md  0003-pydantic-ai-as-agent-framework.md  0004-python-tooling-uv-ruff-commitizen.md  0005-hexagonal-architecture-backend.md  0006-attrs-over-pydantic-and-dataclasses.md  0007-basedpyright-strict-type-checking.md  0008-pytest-testing-strategy.md  0009-dependency-injector-for-composition-root.md  README.md
docs/fable-briefs/: behavioral-graph-schema.md  hybrid-runtime.md  on-device-spike-and-quant-explorer.md  workstream-b-finetune.md
frontend/: README.md
frontend/mobile/: app.json  package-lock.json  package.json
frontend/mobile/src/app/: _layout.tsx  index.tsx
frontend/mobile/src/app/(tabs)/: _layout.tsx  capture.tsx  index.tsx
frontend/mobile/src/components/: member-picker.tsx
frontend/mobile/src/constants/: household.ts  theme.ts
frontend/mobile/src/context/: member-context.tsx
